Fix wraping big words in events

--- a/packages/manager/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-event/dashboard-portfolio-event.scss
+++ b/packages/manager/src/pages/dashboard/components/dashboard-portfolio-events/dashboard-portfolio-event/dashboard-portfolio-event.scss
@@ -33,6 +33,9 @@
     margin-left: 24px;
     & .details-statistics-item {
       padding: 0;
+      &__value {
+        word-break: break-word;
+      }
     }
   }
 
